# typed-latex

./: .gitignore  Makefile  README.md  contact.txt  dune-project  package-lock.json  package.json  parsed_latex.json  pattern.txt  pattern1.txt  patterns.txt  todos.txt  typed_latex.opam
.transformer/env/: pyvenv.cfg
assets/json/: latex.json  parsed-latex.json
assets/patterns/: finished.txt  formatted-patterns.txt  guide.txt  patterns.txt  testpatterns.txt
assets/tex/: output.json  parsed-latex.json  sample.fdb_latexmk  sample.tex  sample1.fdb_latexmk  sample1.tex  sample2.fdb_latexmk  sample2.tex  sample3.tex  sample4.fdb_latexmk  sample4.tex  sample5.tex  sample6.fdb_latexmk  sample6.tex
lib/: ast.ml  ast_print.ml  comparable_extension.ml  construction.ml  dune  infer.ml  latex_aux.ml  latex_deserializer.ml  latex_lexer.mll  latex_parser.messages  latex_parser.mly  lexer.mll  math.ml  math_lexer.mll  math_parser.messages  math_parser.mly  parser.messages  parser.mly  pattern_defs.ml  pattern_extractor.ml  patterns.ml  proof_lex.ml  string_tree.ml  tree_print.ml  typing.ml  user.ml  util.ml
test/: dune  typed_latex_test.ml
tex/: parsed-latex.json  sample.tex  sample2.fdb_latexmk  sample2.tex  sample4.tex
transformer/: .gitignore  __init__.py  __main__.py  notations.py  requirements.txt  utils.py
transformer (old - python)/: __init__.py  sample.tex
