(library
 (name typed_latex)
 (modules
  string_tree
  typing
  math
  patterns
  pattern_defs
  proof_lex
  latex_deserializer
  latex_aux
  util
  comparable_extension
  construction)
 (libraries core menhirLib re yojson)
 ;  (flags -rectypes)
 (preprocess
  (pps
   ; ppx_sexp_conv
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ; ppx_hash
   ppx_jane)))
