(library
 (name typed_latex)
 (modules
  string_tree
  proof_lex
  typing
  patterns
  pattern_extractor
  latex_deserializer
  latex_aux
  util
  comparable_extension
  )
 (libraries core menhirLib re yojson str spectrum)
 ;  (flags -rectypes)
 (preprocess
  (pps
   ; ppx_sexp_conv
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ; ppx_hash
   ppx_jane)))
